tests/type_errors/identity_conflicting_calls.nos
# expect_error: type mismatch
# Test that a bound identity function cannot be used with different types
# Once f is bound to id, using f(42) and f("hello") should conflict

id(x) = x

main() = {
    f = id
    a = f(42)
    b = f("hello")
    0
}
